# MAX32660_setup

./: README.md
MAX32660 Bootloader v3_4_2/non-secure-bl-release-3.4.2/max32630fthr_host_src/: Makefile  Readme.txt  main.cpp  version.h
MAX32660 Bootloader v3_4_2/non-secure-bl-release-3.4.2/max32630fthr_host_src/Drivers/: USBDevice.lib
MAX32660 Bootloader v3_4_2/non-secure-bl-release-3.4.2/max32630fthr_host_src/Utilities/: LEDStatus.cpp  LEDStatus.h  Peripherals.cpp  Peripherals.h  utils.cpp  utils.h
MAX32660 Bootloader v3_4_2/non-secure-bl-release-3.4.2/max32630fthr_host_src/configs/: pegasus_generic_bootloader.config  pegasus_generic_bootloader_uart.config
MAX32660 Bootloader v3_4_2/non-secure-bl-release-3.4.2/max32630fthr_host_src/scripts/: .gdbinit  (+1 more)
MAX32660 Bootloader v3_4_2/non-secure-bl-release-3.4.2/max32660_bootloader_src/: .config  Makefile  Release_Notes.txt  bootloader.c  bootloader.h  bootloader_helper.c  bootloader_helper.h  bootloader_hw_uart.c  bootloader_i2c.c  bootloader_spi.c  bootloader_sw_uart.c  build_all.sh  crash.c  crc32.c  crc32.h  flash.c  flash.h  flash.sh  max32660.gdb  platform_tick.c  platform_tick.h  start.sh  startup_bootloader_max32660.S  utils.c  utils.h  utoa.c
MAX32660 Bootloader v3_4_2/non-secure-bl-release-3.4.2/max32660_bootloader_src/msblGen/: CMakeLists.txt  README.md  crc.c  crc.h  main.c
MAX32660 Bootloader v3_4_2/non-secure-bl-release-3.4.2/max32660_demo/: Enter_Bootloader.msbl  Firmware_downloader_usage.txt  Hello_World_Full_Flash.msbl  I2C_Address_Update.msbl  I2C_Example.msbl  bootloader_max32660_v3.4.2.elf
(+150 files in other folders)
